--- a/bern-badge.css
+++ b/bern-badge.css
@@ -11,22 +11,6 @@
     top: 32px;
 }
 
-.bern-badge-position-R {
+.bern-badge-position-right {
     right: 0;
-}
-
-.bern-badge-B-L-en-1 {
-    background: url('images/B-L-en-1.png');
-}
-
-.bern-badge-B-R-en-1 {
-    background: url('images/B-R-en-1.png');
-}
-
-.bern-badge-R-L-en-1 {
-    background: url('images/R-L-en-1.png');
-}
-
-.bern-badge-R-R-en-1 {
-    background: url('images/R-R-en-1.png');
 }
